# lite_tcp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Develop.md  Dockerfile  README.md  build.sh  build_pack.sh  build_test.sh  build_test_pack.sh  build_with_static_analysis.sh  dev_amd64  dev_arm64  dev_armv7  dev_core  go_to_dev_container_amd64  go_to_dev_container_arm64  go_to_dev_container_armv7  go_to_dev_container_core  pack.sh  package.xml  pre-commit  pre_commit_script
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  docker_build_and_push.yml  release.yml  static_analysis.yml
cmake/: Packing.cmake
include/: lite_tcp.hpp
src/: lite_tcp.cpp  mytcp_client.cpp  mytcp_server.cpp
test/: lite_tcp_test.cc  test.cpp
